--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "supertest": "^6.3.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jest-sorted": "^1.0.14",
